<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Stat Level</string>
    <string name="administrative_n_authority">Administrative \n authority</string>
    <string name="national_bureau_of_nstatistics_of_the_n_republic_of_moldova">National Bureau of \nStatistics of the \n Republic of Moldova</string>
    <string name="general_division_for_n_informational_technologies_ndesigning_of_computer_napplications_division">General Division for\n Informational Technologies, \nDesigning of Computer \nApplications Division</string>
    <string name="website">Website</string>
    <string name="https_statistica_gov_md">https://statistica.gov.md/</string>
    <string name="address">Address</string>
    <string name="bujor_vasile">BUJOR Vasili</string>
    <string name="gheorghita_natalia">GHEORGHIŢĂ Natalia</string>
    <string name="bancu_vitalie">BANCU Vitalie</string>
    <string name="programmer">Programmer</string>
    <string name="afteni_tatiana">Afteni Tatiana</string>
    <string name="Doru_Marian">HERGHELEGIU Doru-Marian</string>
    <string name="Tudor_Popescu">POPESCU Tudor</string>
    <string name="Catalin_Timbalist">ȚÎMBALIST Cătălin</string>
    <string name="clasificatorul_activit_ilor_din_economia_moldovei_caem">CLASIFICATORUL ACTIVITĂŢILOR DIN ECONOMIA MOLDOVEI (CAEM)</string>
    <string name="clasificatorul_activit_ilor_din_economia_moldovei_caem_2">CLASIFICATORUL ACTIVITĂŢILOR DIN ECONOMIA MOLDOVEI (CAEM-2)</string>
    <string name="clasificatorul_formelor_organizatorico_juridice_ale_agen_ilor_economici_din_republica_moldova_c_f_o_j">CLASIFICATORUL FORMELOR ORGANIZATORICO-JURIDICE ALE AGENŢILOR ECONOMICI DIN REPUBLICA MOLDOVA (C.F.O.J.)</string>
    <string name="schema_principal_a_clasificatorului_formelor_de_proprietate">Schema principală a clasificatorului formelor de proprietate</string>
    <string name="clasificatorul_unit_ilor_administrativ_teritoriale_al_republicii_moldova_cuatm">CLASIFICATORUL UNITĂŢILOR ADMINISTRATIV-TERITORIALE AL REPUBLICII MOLDOVA (CUATM)</string>
    <string name="md_2019_chi_in_u_nstr_grenoble_106">MD-2019 Chişinău,\nstr. Grenoble 106</string>
    <string name="division_head">Division Head</string>
    <string name="todo_about_us">TODO</string>
    <string name="about_me">About Me</string>
    <string name="vitalie_bancu">Vitalie Bancu</string>
    <string name="software_engineer_n_programmer">Software Engineer\n Programmer</string>
    <string name="administrative_authority">Administrative authority</string>
    <string name="national_bureau_of_statistics_of_the_republic_of_moldova">National Bureau of Statistics of the Republic of Moldova</string>
    <string name="general_division_for_informational_technologies_designing_of_computer_applications_division">General Division for Informational Technologies, Designing of Computer Applications Division</string>
    <string name="mobile_number">Mobile number</string>
    <string name="_37367770604">+37367770604</string>
    <string name="_CALL_PHONE_BANCU">Phone call</string>
    <string name="_SEND_MAIL_BANCU">send mail</string>
    <string name="md_2019_chi_in_u_str_grenoble_106">MD-2019 Chişinău, str. Grenoble 106</string>
    <string name="email">Email</string>
    <string name="vitalie_bancu_statistica_gov_md">vitalie.bancu@statistica.gov.md</string>
    <string name="clasificatorul_produse_si_servicii_cu_caracter_industrial">Clasificatorul - Produse si servicii cu caracter industrial</string>
    <string name="scientists_editing_page">Scientists Editing Page</string>
    <string name="instruc_iune">Instrucțiune</string>
    <string name="adauga_i_angajatul_n_edittext_apoi_face_i_clic_pe_butonul_de_salvare_din_bara_de_instrumente_unele_c_mpuri_precum_numele_i_loca_i_trebuie_s_fie_completate">Adaugați angajatul în edittext, apoi faceți clic pe butonul de salvare din bara de instrumente. Unele câmpuri precum numele și locați trebuie să fie completate.</string>
    <string name="informa_ie_despre_angajat">Informație despre angajat</string>
    <string name="nume_prenume">Nume, prenume</string>
    <string name="loca_ia">Locația</string>
    <string name="telefon">Telefon</string>
    <string name="cercet_ri_statistice">Cercetări Statistice</string>
    <string name="informa_ii_personale">Informații personale</string>
    <string name="angaja_ii_bns">Angajații BNS</string>
    <string name="vizualizarea_tuturor_angaja_ilor">Vizualizarea tuturor angajaților</string>
    <string name="despre_accesarea_informatiei_de_contact_a_angajatilor_bns">despre accesarea informatiei de contact a angajatilor BNS</string>
    <string name="a_e_n_r_m">A.E în R.M</string>
    <string name="vizualizarea_tuturor_a_e_n_r_m">Vizualizarea tuturor A.E în R.M</string>
    <string name="structura_bns">Structura BNS</string>
    <string name="structura_biroului_na_ional_de_statistic">Structura Biroului Naţional de Statistică</string>
    <string name="despre_accesarea_datelor_deschise_a_unita_ilor_de_drept_din_rep_moldova">despre accesarea datelor deschise a Unitaților de Drept din Rep. Moldova</string>
    <string name="clasificatorul_medicamentelor">Clasificatorul medicamentelor</string>
    <string name="ordinul_msps_rm_nr_271_din_04_07_2006_cu_privire_la_aprobarea_clasificatorului_medicamentelor_nregistrate_n_republica_moldova">Ordinul MSPS RM nr. 271 din 04.07.2006 „Cu privire la aprobarea Clasificatorului medicamentelor înregistrate în Republica Moldova</string>
    <string name="indrumar">Indrumar</string>
    <string name="despre_accesarea_datelor_deschise_si_c_tre_agen_ii_economici_implica_i_n_circula_ia_medicamentelor_din_rep_moldova">despre accesarea datelor deschise si către agenţii economici implicaţi în circulaţia medicamentelor din Rep. Moldova</string>
    <string name="a_e_cuatm">A.E - CUATM</string>
    <string name="a_e_caem">A.E - CAEM</string>
    <string name="cuatm">CUATM</string>
    <string name="clasificatorul_unit_ilor_administrativ_teritoriale">Clasificatorul unităţilor administrativ-teritoriale</string>
    <string name="a_e_cfp">A.E - CFP</string>
    <string name="caem2">CAEM2</string>
    <string name="caem">CAEM</string>
    <string name="cfoj">CFOJ</string>
    <string name="clasificatorul_formelor_organizatorico_juridice_ale_agen_ilor_economici_din_republica_moldova">CLASIFICATORUL FORMELOR ORGANIZATORICO-JURIDICE ALE AGENŢILOR ECONOMICI DIN REPUBLICA MOLDOVA</string>
    <string name="cfp">CFP</string>
    <string name="cl_servicii">CL SERVICII</string>
    <string name="cocm">COCM</string>
    <string name="clasificatorul_organelor_de_conducere_al_republicii_moldova_cocm">Clasificatorul Organelor de Conducere al Republicii Moldova (COCM)</string>
    <string name="todo">TODO</string>
    <string name="cl_tari">Cl Tari</string>
    <string name="clasificatorul_interna_ional_al_rilor_lumii_i_teritoriilor_care_se_utilizeaz_la_completarea_rapoartelor_statistice_privind_exportul_i_importul_de_servicii">Clasificatorul internaţional al ţărilor lumii şi teritoriilor, care se utilizează la completarea rapoartelor statistice privind exportul şi importul de servicii</string>
    <string name="about_us">About us</string>
    <string name="view_about_contatact_us">View About / Contatact us</string>
    <string name="exit">Exit</string>
    <string name="exit_of_the_from_application">Exit of the from application.</string>
    <string name="date_statistice_din_registrul_de_stat_al_unit_ilor_de_drept_dup_forma_juridic_de_organizare">Date statistice din Registrul de stat al unităţilor de drept după forma juridică de organizare</string>
    <string name="date_statistice_din_registrul_de_stat_al_unit_ilor_de_drept_n_profil_administrativ_teritorial">Date statistice din Registrul de stat al unităţilor de drept în profil administrativ-teritorial</string>
    <string name="lista_angaja_ilor">Lista angajaților</string>
    <string name="lista_unita_ilor_a_e">Lista unitaților A.E</string>
    <string name="biroul_na_ional_de_statistic_al_republicii_moldova">Biroul Național de Statistică al Republicii Moldova</string>
    <string name="direc_ia_general_tehnologii_informa_ionale">Direcția generală tehnologii informaționale</string>
    <string name="direc_ia_proiectare_aplica_ii_informatice">Direcția proiectare aplicații informatice</string>
    <string name="director_general">* Director general</string>
    <string name="directori_generali_adjunc_i">* Directori generali adjuncţi</string>
    <string name="cabinetul_directorului_general">* Cabinetul directorului general</string>
    <string name="direc_ia_coordonare_statistic_i_cooperare_interna_ional">* Direcţia coordonare statistică şi cooperare internaţională</string>
    <string name="sec_ia_audit_intern_i_managementul_calit_ii">*** Secția audit intern și managementul calității</string>
    <string name="direc_ia_general_statistica_macroeconomic">* Direcţia generală statistica macroeconomică</string>
    <string name="direc_ia_conturi_na_ionale">** Direcția conturi naționale</string>
    <string name="direc_ia_statistica_pre_urilor_de_consum">** Direcția statistica prețurilor de consum</string>
    <string name="direc_ia_statistica_comer_ului_exterior">** Direcția statistica comerțului exterior</string>
    <string name="direc_ia_general_statistica_ntreprinderilor">* Direcţia generală statistica întreprinderilor</string>
    <string name="direc_ia_statistica_industriei_i_energeticii">** Direcția statistica industriei și energeticii</string>
    <string name="direc_ia_statistica_investi_iilor_i_construc_iilor">** Direcția statistica investițiilor și construcțiilor</string>
    <string name="direc_ia_statistica_structural">** Direcția statistica structurală</string>
    <string name="direc_ia_statistica_comer_ului_interior">** Direcția statistica comerțului interior</string>
    <string name="direc_ia_statistica_transporturilor_turismului_i_tic">** Direcția statistica transporturilor, turismului și TIC</string>
    <string name="direc_ia_registre_i_clasificatoare">** Direcția registre și clasificatoare</string>
    <string name="direc_ia_statistica_agriculturii_i_mediului">** Direcția statistica agriculturii și mediului</string>
    <string name="sec_ia_statistica_agriculturii">*** Secția statistica agriculturii</string>
    <string name="sec_ia_cercet_ri_selective_n_agricultur">*** Secția cercetări selective în agricultură</string>
    <string name="serviciul_statistica_mediului">*** Serviciul statistica mediului</string>
    <string name="direc_ia_general_colectarea_datelor_entit_i_economice">* Direcţia generală colectarea datelor entităţi economice</string>
    <string name="direc_ia_situa_ii_financiare">** Direcția situații financiare</string>
    <string name="direc_ia_colectarea_i_validarea_datelor">** Direcția colectarea și validarea datelor</string>
    <string name="direc_ia_colectarea_datelor_pre_uri">** Direcția colectarea datelor prețuri</string>
    <string name="direc_ia_general_statistica_social_i_demografie">* Direcţia generală statistica socială şi demografie</string>
    <string name="direc_ia_statistica_nivelului_de_trai">** Direcția statistica nivelului de trai</string>
    <string name="direc_ia_statistica_ocup_rii">** Direcția statistica ocupării</string>
    <string name="direc_ia_statistica_salariilor">** Direcția statistica salariilor</string>
    <string name="direc_ia_statistica_popula_iei_i_migra_iei">** Direcția statistica populației și migrației</string>
    <string name="direc_ia_statistica_serviciilor_sociale">** Direcția statistica serviciilor sociale</string>
    <string name="sec_ia_statistica_educa_iei_tiin_ei_i_culturii">*** Secția statistica educației, științei și culturii</string>
    <string name="direc_ia_recens_minte">** Direcția recensăminte</string>
    <string name="direc_ia_diseminare_i_comunicare">** Direcția diseminare și comunicare</string>
    <string name="division">Division</string>
</resources>