<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/mRelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/aboutUsToolBar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/mBackArrow"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_centerVertical="true"
                    android:padding="5dp"
                    android:src="@drawable/ic_back_arrow"
                    android:contentDescription="@string/todo"
                    tools:ignore="ContentDescription" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:layout_toRightOf="@+id/mBackArrow"
                    android:text="@string/about_us"
                    android:textColor="@color/white"
                    android:textSize="21sp"
                    android:layout_marginStart="20dp"
                    tools:ignore="RtlHardcoded" />
            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mRelativeLayout1"
        android:background="@color/colorPrimary"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/mRelativeLayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:id="@+id/mRelativeLayout7"
                    android:layout_width="match_parent"
                    android:layout_height="90dp"

                    android:background="@drawable/shadow_bottom">

                    <TextView
                        android:id="@+id/bancu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"

                        android:text="@string/programmer"
                        android:textColor="@android:color/black"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/bancu_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_toEndOf="@+id/bancu"
                        android:text="@string/bancu_vitalie" />

                    <TextView
                        android:id="@+id/bancu_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:layout_marginStart="40dp"
                        android:layout_below="@+id/bancu_1"
                        android:onClick="onCallTextivewClick"
                        android:textColor="#FF0000"
                        android:text="@string/_CALL_PHONE_BANCU"/>

                    <TextView
                        android:id="@+id/bancu_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/bancu_1"

                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:layout_toEndOf="@+id/bancu_2"

                        android:text="@string/_SEND_MAIL_BANCU"
                        android:textColor="#FF0000"
                        android:onClick="openEmail"

                        />

                </RelativeLayout>


            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>


</RelativeLayout>